5.20180220
  - Improve handling of broken versions in is_core()
  - Updated for v5.27.9

5.20180120
  - Updated for v5.27.8

5.20171220
  - Updated for v5.27.7

5.20171120
  - Updated for v5.27.6

5.20171020
  - Updated for v5.27.5

5.20170922_26
  - Updated for v5.26.1

5.20170922_24
  - Updated for v5.24.3

5.20170920
  - Updated for v5.27.4

5.20170821
  - Updated for v5.27.3

5.20170720
  - Updated for v5.27.2

5.20170715_24
  - Updated for v5.24.2

5.20170715_22
  - Updated for v5.22.4

5.20170621
  - Updated for v5.27.1

5.20170531
  - Updated for v5.27.0

5.20170530
  - Updated for v5.26.0

5.20170420
  - Updated for v5.25.12

5.20170320
  - Updated for v5.25.11

5.20170220
  - Updated for v5.25.10

5.20170120
  - Updated for v5.25.9

5.20170114_24
  - Updated for v5.24.1

5.20170114_22
  - Updated for v5.22.3

5.20161220
  - Updated for v5.25.8

5.20161120
  - Updated for v5.25.7

5.20161020
  - Updated for v5.25.6

5.20160920
  - Updated for v5.25.5

5.20160820
  - Updated for v5.25.4

5.20160720
  - Updated for v5.25.3

5.20160620
  - Updated for v5.25.2

5.20160520
 - fixed edge-case checking in is_core() (checking for a specific
   version of a module returned false for the first perl release
   that contained it)
 - Updated for v5.25.1

5.20160429
 - Updated for v5.22.2

5.20160320
 - Updated for v5.23.9

5.20160228
  - [perl #127624] corelist: wrong Digest::SHA version in 5.18.4

5.20160220
  - Updated for v5.23.8

5.20160120
  - Updated for v5.23.7

5.20151220
  - Updated for v5.23.6

5.20151213
  - Updated for v5.22.1

5.20151120
  - Updated for v5.23.5

5.20151020
  - Updated for v5.23.4

5.20150920
  - Updated for v5.23.3

5.20150912
  - Updated for v5.20.3

5.20150820
  - Updated for v5.23.2

5.20150720
  - Updated for v5.23.1

5.20150520
  - Updated for v5.22.0

5.20150420
  - Updated for v5.21.11
  - fixes a fencepost error in is_core()
  - copes with versions that do not match x.yyyzzz

5.20150320
  - Updated for v5.21.10

5.20150220