@@ -8,11 +8,10 @@ use Config;
 
 require './t/test.pl';
 
-plan(tests => 6);
+plan(tests => 5);
 
 use_ok('Module::CoreList');
 use_ok('Module::CoreList::Utils');
-use_ok('Module::CoreList::TieHashDelta');
 
 {
   no warnings 'once';
